force-app/main/default/objects/ssot__Personalizer__dlm/fields/ssot__ContentObjectName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentObjectName__c</fullName>
    <label>Content Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContentObjectName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>