force-app/main/default/objects/ssot__Personalizer__dlm/fields/ssot__Goal__c.field-meta.xml
<CustomField>
    <fullName>ssot__Goal__c</fullName>
    <label>Goal</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Goal</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>