force-app/main/default/objects/ssot__Personalizer__dlm/fields/ssot__LastRefreshStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastRefreshStatus__c</fullName>
    <label>Last Refresh Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastRefreshStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>