force-app/main/default/objects/ssot__Personalizer__dlm/fields/ssot__LastSuccessfulRefreshDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastSuccessfulRefreshDateTime__c</fullName>
    <label>Last Successful Refresh Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastSuccessfulRefreshDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>